just another commit

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Flasch!'"
       ]
      },
      "execution_count": null,
@@ -71,7 +71,16 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello(\"Flasch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert say_hello(\"Flasch\") == 'Hello Flasch!'"
    ]
   },
   {
