--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -74,6 +74,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class HelloSayer:\n",
+    "    \"Say hello to `to` using `say_hello`\"\n",
+    "    def __init__(self, to): self.to = to\n",
+    "    def say(self): say_hello(self.to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
