fix various bugs in tutorial

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -75,10 +75,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class HelloSayer:\n",
     "    \"Say hello to `to` using `say_hello`\"\n",
-    "    def __init__(self, to): self.to = to\n",
-    "    def say(self): say_hello(self.to)"
+    "    \n",
+    "    def __init__(self, to): \n",
+    "        self.to = to\n",
+    "        print(\"HelloSayer initialized for\", self.to)\n",
+    "    \n",
+    "    def say(self): \n",
+    "        print(\"Saying hello to\", self.to)\n",
+    "        say_hello(self.to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = HelloSayer(\"Franz\")\n",
+    "print(h.say())"
    ]
   },
   {
