--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -37,6 +37,7 @@
     "#export\n",
     "def say_hello(to):\n",
     "    \"Say hello to somebody\"\n",
+    "    #print(\"say_hello to\", to)\n",
     "    return f'Hello {to}!'"
    ]
   },
@@ -81,29 +82,21 @@
     "    \n",
     "    def __init__(self, to): \n",
     "        self.to = to\n",
-    "        print(\"HelloSayer initialized for\", self.to)\n",
+    "        #print(\"HelloSayer initialized for\", self.to)\n",
     "    \n",
     "    def say(self): \n",
-    "        print(\"Saying hello to\", self.to)\n",
-    "        say_hello(self.to)"
+    "        #print(\"Saying hello to\", self.to)\n",
+    "        return say_hello(self.to)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h = HelloSayer(\"Franz\")\n",
-    "print(h.say())"
+    "assert h.say() == 'Hello Franz!'"
    ]
   },
   {
